# haskell-gargantext

./: .envrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build-shell.nix  cabal.project  debian-install  default.nix  gargantext.cabal  gargantext.ini  gargantext.ini_toModify  install  install-via-docker  moduleDesc.model  package.yaml  pinned-19.09.nix  pinned-20.09.nix  pinned.nix  run  server  shell.nix  stack.yaml  start  swagger.json  version  weeder.dhall
Data.ByteString/: Extended.hs
app/: CleanCsvCorpus.hs  Main.hs
clustering-louvain/: LICENSE  todo
clustering-louvain/app/: Main.hs
clustering-louvain/src/Data/: Example.hs  GexfParser.hs  Louvain.hs  Utils.hs  karate.gexf
clustering-louvain/test/: Igraph.py  Networkx.py  Spec.hs
devops/: build-doc  debian-install  debianPkgs  docker-import  docker-postgres  docker-prod  install-corenlp  install-deps  tmux.sh
devops/coreNLP/: Dockerfile
devops/debian/: debianPkgs  deps  docker  install  install-clustering-louvain  install-postgres  install-purescript
devops/docker/: Dockerfile  Dockerfile-ihaskell  docker-compose.yaml  docker-import  docker-install  docker-postgres  docker-prod  install_docker  install_docker.sh
devops/maintenance/: index.html  index.md
devops/misc/: check-repo-cycles.jq  stats.jq
devops/nginx/: default  index.html  install
devops/nginx/frames/: default
devops/openStack/: install
devops/postgres/: create  empty  extensions.sql  schema  schema.sql
devops/postgres/tools/: removeUnusedDocuments.sql  removeUnusedNgrams.sql
devops/postgres/upgrade/: 0.0.2.6.sql  0.0.4.1.sql  0.0.4.sql  0.0.5.5.2.sql  0.0.5.5.6.sql  0.0.5.7.5.sql  0.0.5.7.8.sql  0.0.5.8.9.5.sql  0.0.5.9.1.sql  0.0.5.9.sql  0.0.6.0.sql  0.0.6.1.sql  0.0.6.2.sql  0.0.6.7.2.sql  0.0.6.7.3.sql  0.0.6.7.3_undo.sql  0.0.6.8.3.sql  0.0.6.9.4.sql  0.0.6.9.9.4.4.sql  0.0.6.sql
devops/postgres/upgrade/0.0.5/: nodes2contexts.sql  schema.sql
devops/ubuntu/: install
devops/upgrade/: 0.0.6.1.sh
docs/: search-api.org
ekg-assets/: monitor.js
frontEnd/: index.html
nix/: pinned-20.09.nix  pinned-21.05.nix  pinned-22.05.nix  pkgs.nix  shell.nix  stack-shell.nix
notes/: foldFinal.hs  folds.hs
src/: Gargantext.hs
src-doctest/: Main.hs
src-test/: Main.hs
src-test/Core/: Text.hs  Utils.hs
src-test/Core/Text/: Examples.hs  Flow.hs
src-test/Graph/: Clustering.hs  Distance.hs
src-test/Ngrams/: Lang.hs  Metrics.hs  NLP.hs  Query.hs
src-test/Ngrams/Lang/: En.hs  Fr.hs  Occurrences.hs
src-test/Ngrams/Query/: PaginationCorpus.hs
src-test/Parsers/: Date.hs  Types.hs  WOS.hs
src-test/Utils/: Crypto.hs
src/Control/: Debounce.hs
src/Data/: Gargantext.hs
src/Data/Gargantext/: Analysis.hs  DSL.hs  Database.hs  Error_hs  NLP.hs  Ngrams.hs  Parsers.hs  Prelude.hs  RCT.hs  Server.hs  Types.hs  Utils.hs
src/Data/Gargantext/Database/: Instances.hs  Ngram.hs  Node.hs  NodeNgram.hs  NodeNgramNgram.hs  NodeNode.hs  NodeNodeNgram.hs  Private.hs  User.hs
src/Data/Gargantext/Internal/: API.hs
src/Data/Gargantext/NLP/: CoreNLP.hs
src/Data/Gargantext/Ngrams/: CoreNLP.hs  Count.hs  Hetero.hs  Metrics.hs  Occurrences.hs  Parser.hs  TextMining.hs  Utils.hs  Words.hs  Words_hs
src/Data/Gargantext/Parsers/: Date.hs  Occurrences.hs  WOS.hs
src/Data/Gargantext/Types/: Main.hs  Node.hs
src/Data/Gargantext/Utils/: Chronos.hs  Count.hs  DateUtils.hs  LangDetect.hs  Prefix.hs  SaveGetHash.hs
src/Gargantext/: API.hs  Analysis.hs  Client.hs  Config.hs  Core.hs  DSL.hs  Database.hs  Defaults.hs  Network_hs  Ngrams.hs  Parsers.hs  Pipeline.hs  Prelude.hs  RCT.hs  Rights_hs  Server.hs  Text.hs  TextFlow.hs  Types.hs  Utils.hs  Viz.hs
src/Gargantext/API/: Annuaire.hs  Application.hs  Auth.hs  BugRoutes.hs  Client.hs  Context.hs  Count.hs  Dev.hs  EKG.hs  Export.hs  Flow.hs  Foundation.hs  FrontEnd.hs  GraphQL.hs  HashedResponse.hs  Job.hs  Members.hs  Metrics.hs  Ngrams.hs  Node.hs  Orchestrator.hs  Prelude.hs  Public.hs  Routes.hs  Search.hs  Server.hs  Settings.hs  Swagger.hs  Table.hs  ThrowAll.hs  Types.hs  Upload.hs  Utils.hs  test.txt
src/Gargantext/API/Admin/: Auth.hs  EnvTypes.hs  FrontEnd.hs  Orchestrator.hs  Settings.hs  Types.hs  Utils.hs
src/Gargantext/API/Corpus/: Annuaire.hs  Export.hs  New.hs
src/Gargantext/API/GraphQL/: Annuaire.hs  AsyncTask.hs  Context.hs  Ethercalc.hs  IMT.hs  (+7 more)
src/Gargantext/Core/: Auth.hs  Flow.hs  Mail.hs  NLP.hs  NodeStory.hs  NodeStoryFile.hs  Pass.hs  Statistics.hs  Text.hs  Types.hs  Utils.hs  Viz.hs
src/Gargantext/Database/: Access.hs  Bashql.hs  Config.hs  Cooc.hs  DAC.hs  Facet.hs  Flow.hs  GargDB.hs  Init.hs  Instances.hs  Learn.hs  Lists.hs  Metrics.hs  Ngram.hs  Ngrams.hs  Node.hs  NodeNgram.hs  NodeNgramNgram.hs  NodeNgramsNgrams.hs  NodeNode.hs  NodeNodeNgram.hs  NodeStory.hs  Prelude.hs  Private.hs  Queries.hs  Query.hs  Root.hs  TextSearch.hs  Tree.hs  Triggers.hs  Types.hs  User.hs  Utils.hs
src/Gargantext/Ext/: IMT.hs  IMTUser.hs
src/Gargantext/Graph/: Utils.hs
src/Gargantext/Ngrams/: Analysis.hs  CoreNLP.hs  Count.hs  FrequentItemSet.hs  Hetero.purs  Hetero_hs  Letters.hs  List.hs  Metrics.hs  Occurrences.hs  Parser.hs  TFICF.hs  TFICF_hs  TextMining.hs
src/Gargantext/Parsers/: Date.hs  WOS.hs
src/Gargantext/Prelude/: Clock.hs  Config.hs  Fibonacci.hs  GargDB.hs  Job.hs  Mail.hs  Utils.hs
src/Gargantext/Text/: Analysis.hs  Context.hs  Convert.hs  CoreNLP.hs  Crawlers.hs  Eleve.hs  Examples.hs  Flow.hs  FrequentItemSet.hs  Hetero.purs  Learn.hs  Letters.hs  List.hs  Metrics.hs  Ngrams.hs  Occurrences.hs  Parser.hs  Parsers.hs  Search.hs  TFICF.hs  Terms.hs  TextMining.hs  Word2Vec_hs
src/Gargantext/Types/: Main.hs  Node.hs  Phylo.hs
src/Gargantext/Utils/: Aeson.hs  Count_hs  DateUtils.hs  Jobs.hs  JohnSnowNLP.hs  Prefix.hs  SaveGetHash_hs  Servant.hs  SpacyNLP.hs  Tuple.hs  UTCTime.hs
src/Gargantext/Viz/: AdaptativePhylo.hs  Chart.hs  Graph.hs  Phylo.hs  Types.hs
test/: Main.hs  Ngrams.hs  Parsers.hs  Spec.hs
test/Ngrams/Lang/: En.hs  Fr.hs  Occurrences.hs
tests/queue/: Main.hs
(+522 files in other folders)
