name:                gargantext
version:             0.1.0.0
synopsis:            Deep (Collaborative) Text mining project
description:         Please see README.md
homepage:            http://gargantext.org
license:             BSD3
license-file:        LICENSE
author:              Alexandre Delanoë
maintainer:          gargantext@iscpif.fr
copyright:           Copyright: (c) 2016,2017 CNRS Alexandre Delanoë
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:    base >= 4.7 && < 5
                  , aeson
                  , attoparsec
                  , async
                  , base16-bytestring
                  , bytestring
                  , case-insensitive
                  , containers
                  , contravariant
                  , conduit
                  , conduit-extra
                  , directory
                  , duckling
                  , extra
                  , filepath
                  , http-conduit
                  , lens
                  , logging-effect
                  , opaleye
                  , path
                  , parsec
                  , postgresql-simple
                  , pretty
                  , product-profunctors
                  , profunctors
                  , protolude
                  , pureMD5
                  , regex-compat
                  , semigroups
                  , servant
                  , servant-client
                  , servant-multipart
                  , servant-server
                  , split
                  , tagsoup
                  , text
                  , text-metrics
                  , time
                  , timezone-series
                  , time-locale-compat
                  , transformers
                  , unordered-containers
                  , uuid
                  , vector
                  , wai
                  , warp
                  , yaml
                  , zlib
                  , zip
                  , path-io
                  --, LibZip
                  -- , stemmer
                  --, utc
  exposed-modules: Data.Gargantext
                  , Data.Gargantext.Analysis
                  , Data.Gargantext.DSL
                  , Data.Gargantext.Database
                  , Data.Gargantext.Database.Instances
                  , Data.Gargantext.Database.Ngram
                  , Data.Gargantext.Database.Node
                  , Data.Gargantext.Database.NodeNgram
                  , Data.Gargantext.Database.NodeNgramNgram
                  , Data.Gargantext.Database.NodeNode
                  , Data.Gargantext.Database.NodeNodeNgram
                  , Data.Gargantext.Database.Private
                  , Data.Gargantext.Database.User
                  , Data.Gargantext.Ngrams
                  , Data.Gargantext.Ngrams.Count
                  , Data.Gargantext.Ngrams.CoreNLP
                  , Data.Gargantext.Ngrams.Parser
                  , Data.Gargantext.Ngrams.Lang.En
                  , Data.Gargantext.Ngrams.Lang.Fr
                  , Data.Gargantext.Ngrams.Metrics
                  , Data.Gargantext.Ngrams.TextMining
                  , Data.Gargantext.Ngrams.Occurrences
                  , Data.Gargantext.Parsers
                  , Data.Gargantext.Parsers.WOS
                  , Data.Gargantext.Parsers.Date
                  , Data.Gargantext.Prelude
                  , Data.Gargantext.Server
                  , Data.Gargantext.Types
                  , Data.Gargantext.Types.Main
                  , Data.Gargantext.Types.Node
                  , Data.Gargantext.Utils.DateUtils
                  , Data.Gargantext.Utils.Prefix
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Werror

-- -Werror

--executable gargantext-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , hastext
--  default-language:    Haskell2010

test-suite garg-test-ngrams
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules: 
      Ngrams.Lang
      Ngrams.Lang.Fr
      Ngrams.Lang.En
      Ngrams.Lang.Occurrences
      Ngrams.Metrics
  build-depends:       base
                     , extra
                     , text
                     , gargantext
                     , hspec
                     , QuickCheck
